src/test/ui/parser/unclosed-braces.stderr
error: this file contains an un-closed delimiter
  --> $DIR/unclosed-braces.rs:22:53
   |
LL | fn main() {
   |           - un-closed delimiter
...
LL |         {
   |         - this delimiter might not be properly closed...
...
LL |     }
   |     - ...as it matches this but it has different indentation
...
LL |
   |                                                     ^

error: aborting due to previous error

